[package]
name = "rest_client"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = {version =  "0.11", features = ["json"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
openssl = {version = "0.10", features=["vendored"]}
tokio = {version = "1", features=["full"]}
serde_with = "3.16.1"
log = "0.4.29"
env_logger = "0.11.8"
